--- a/src/main/resources/templates/menu/add-item.html
+++ b/src/main/resources/templates/menu/add-item.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
     <head th:replace="fragments :: head"></head>
+
     <body class="container">
         <h1 th:text="${title}">Default Title</h1>
-
         <nav th:replace="fragments :: navigation"></nav>
 
-        <form method="post" style="max-width:600px;" th:object="${newMenuItem}" modelAttribute="newMenuItem">
-
+        <form method="post" th:object="${form}" action="/menu/add-item">
             <div class="form-group">
                 <label th:for="cheeseId">Cheese</label>
-                <select th:field="*{cheeseId}" name="cheeseId">
-                    <option th:each="cheese : ${newMenuItem.cheeses}"
+                <select name="cheeseId">
+                    <option th:each="cheese : *{cheeses}"
                             th:text="${cheese.name}"
-                            th:value="${cheese.Id}"></option>
+                            th:value="${cheese.id}">
+                    </option>
                 </select>
-
-                <input type="hidden" value="1" th:field="*{menuId}" name="menuId" />
             </div>
 
-            <input type="submit" value="Add Cheese" />
+            <input type="hidden" name="menuId" th:value="*{menu.id}" />
+            <input type="submit" value="Add Item" />
         </form>
 
     </body>
